--- a/public/src/partials/application/index.html
+++ b/public/src/partials/application/index.html
@@ -82,7 +82,7 @@
 				<tr ng-repeat="i in showBalances"  >
 					<td class="wop">{{i.currency}}</td>
 					<td class="wop">{{i.quantityShow | unitFilter }}</td>
-					<td class="wop">{{i.balance | xasFilter}}</td>
+					<td class="wop">{{i.balance | jdcnFilter}}</td>
 				</tr>
 			</table>
 		</div>
