--- a/public/src/partials/modal/deletevote/index.html
+++ b/public/src/partials/modal/deletevote/index.html
@@ -22,5 +22,5 @@
         <button ng-click="checkvoteto()">{{'DELETE' | translate}} {{'VOTE' | translate}}</button>
         <a href="" ng-click="Close()">{{'CANCEL' | translate}}</a>
     </div>
-    <p class="tar">{{'NEED_PAY' | translate}} 0.1 XAS</p>
+    <p class="tar">{{'NEED_PAY' | translate}} 0.1 JDCN</p>
 </div>
