--- a/public/src/partials/blockchain/index.html
+++ b/public/src/partials/blockchain/index.html
@@ -29,9 +29,9 @@
 				<td><i class="level" ng-click="showdetailInfo(i)">{{i.id}}</i></td>
 				<td><i class="level" ng-click="showaccountdetailInfo(i.generatorId)">{{i.generatorId}}</i></td>
 				<td><i class="level" ng-click="showdealInfo(i)">{{i.numberOfTransactions}}</i></td>
-				<td>{{i.totalAmount  | jdcnFilter }}</td>
-				<td>{{i.totalFee | jdcnFilter}}</td>
-				<td>{{i.reward | jdcnFilter}}</td>
+				<td>{{i.totalAmount  | sercFilter }}</td>
+				<td>{{i.totalFee | sercFilter}}</td>
+				<td>{{i.reward | sercFilter}}</td>
 			</tr>
 		</table>
 
