--- a/public/src/partials/personal/index.html
+++ b/public/src/partials/personal/index.html
@@ -30,8 +30,8 @@
 								<!--</div>-->
 								<div class="sum_text text_row">
 									<span class="greyFont">{{'TOTAL' | translate}} {{'BALANCE' | translate}} : </span>
-									<span class="orangeFont"> {{userService.balance  | jdcnFilter  }}</span>
-									<span class="greyFont">JDCN</span>
+									<span class="orangeFont"> {{userService.balance  | sercFilter  }}</span>
+									<span class="greyFont">SERC</span>
 								</div>
 								<!--<div class="dallor_text text_row">-->
 									<!--<span class="greyFont">美元折算 : </span><span class="orangeFont"> $0.28</span>-->
