--- a/public/src/partials/addACL/index.html
+++ b/public/src/partials/addACL/index.html
@@ -18,7 +18,7 @@
     </div>
     <button class="sent" ng-click="sub()">{{'SUBMIT' | translate}}</button>
     <div id="comfirmDia" ng-show="comfirmDialog">
-        <p>{{'OPERATION_REQUIRES_FEE' | translate}} {{ addacltrs.fee | jdcnFilter}} JDCN</p>
+        <p>{{'OPERATION_REQUIRES_FEE' | translate}} {{ addacltrs.fee | sercFilter}} SERC</p>
         <button class="sent" ng-click="comfirmDialogClose()">{{'CANCEL' | translate}}</button>
         <button class="sent" ng-click="comfirmSub()">{{'CONFIRM' | translate}}</button>
     </div>
