--- a/public/src/partials/modal/assignee/index.html
+++ b/public/src/partials/modal/assignee/index.html
@@ -23,5 +23,5 @@
 
     </div>
     <div class="clearfloat"></div>
-    <p>{{'NEED_PAY' | translate}}100JDCN</p>
+    <p>{{'NEED_PAY' | translate}} 100 SERC</p>
 </div>
