--- a/public/src/partials/modal/voteto/index.html
+++ b/public/src/partials/modal/voteto/index.html
@@ -20,5 +20,5 @@
         <button ng-click="checkvoteto()">{{'CONFIRM' | translate}} {{'VOTE' | translate}}</button>
         <a href="" ng-click="Close()">{{'CANCEL' | translate}}</a>
     </div>
-    <p class="tar">{{'NEED_PAY' | translate}} 0.1 JDCN</p>
+    <p class="tar">{{'NEED_PAY' | translate}} 0.1 SERC</p>
 </div>
